--- a/styles/mainStyles.css
+++ b/styles/mainStyles.css
@@ -116,8 +116,8 @@ header {
           align-items: center;
 }
 
-header .header-logo {
-  width: 100px;
+header .header-logo span {
+  font-size: 5rem;
 }
 
 header .wrapper-menu {
