Added GSAP scroll animation

--- a/styles/mainStyles.scss
+++ b/styles/mainStyles.scss
@@ -65,7 +65,7 @@ p {
 }
 
 section {
-    min-height: 35rem;
+  min-height: 100vh;
 }
 
 header,
@@ -105,7 +105,7 @@ header {
   align-items: center;
 
   .header-logo span {
-      font-size: 5rem;
+    font-size: 5rem;
   }
 
   .wrapper-menu {
@@ -169,5 +169,40 @@ header {
   }
   button {
     margin: 1em 0;
+  }
+
+  .wave {
+    animation-name: wave-animation;
+    animation-duration: 2.5s;
+    animation-iteration-count: infinite;
+    transform-origin: 70% 70%;
+    display: inline-block;
+  }
+
+  @keyframes wave-animation {
+    0% {
+      transform: rotate(0deg);
+    }
+    10% {
+      transform: rotate(14deg);
+    }
+    20% {
+      transform: rotate(-8deg);
+    }
+    30% {
+      transform: rotate(14deg);
+    }
+    40% {
+      transform: rotate(-4deg);
+    }
+    50% {
+      transform: rotate(10deg);
+    }
+    60% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
   }
 }
