--- a/styles/mainStyles.css
+++ b/styles/mainStyles.css
@@ -72,7 +72,7 @@ p {
 }
 
 section {
-  min-height: 100vh;
+  min-height: 75vh;
 }
 
 header,
@@ -102,6 +102,12 @@ button {
   font-family: var(--regular-font);
   font-size: 1.35rem;
   padding: 1rem;
+}
+
+@media screen and (min-width: 56em) {
+  .container--narrow {
+    min-width: 55rem;
+  }
 }
 
 header {
@@ -281,6 +287,29 @@ header .nav-links {
   100% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
+  }
+}
+
+@media screen and (min-width: 55em) {
+  .about-secction {
+    margin: 0 auto;
+  }
+  .about-secction p {
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 50em) {
+  .main-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 /*# sourceMappingURL=mainStyles.css.map */
