--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,15 +1,15 @@
 @font-face {
   font-family: "Didot-Regular";
-  src: url(/Assets/fonts/Didot_Regular.ttf);
+  src: url(../Assets/fonts/Didot_Regular.ttf);
 }
 
 @font-face {
   font-family: "Didot-Medium";
-  src: url(/Assets/fonts/Didot_Medium.ttf);
+  src: url(../Assets/fonts/Didot_Medium.ttf);
 }
 
 @font-face {
   font-family: "Didot-Bold";
-  src: url(/Assets/fonts/Didot_LT_Std_Bold.otf);
+  src: url(../Assets/fonts/Didot_LT_Std_Bold.otf);
 }
 /*# sourceMappingURL=fonts.css.map */
