--- a/styles/mainStyles.css
+++ b/styles/mainStyles.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: "Didot-Regular";
-  src: url(/Assets/fonts/Didot_Regular.ttf);
+  src: url(../Assets/fonts/Didot_Regular.ttf);
 }
 
 @font-face {
   font-family: "Didot-Medium";
-  src: url(/Assets/fonts/Didot_Medium.ttf);
+  src: url(../Assets/fonts/Didot_Medium.ttf);
 }
 
 @font-face {
   font-family: "Didot-Bold";
-  src: url(/Assets/fonts/Didot_LT_Std_Bold.otf);
+  src: url(../Assets/fonts/Didot_LT_Std_Bold.otf);
 }
 
 :root {
@@ -60,7 +60,11 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  font-family: var(--medium-font);
+  font-family: var(--bold-font);
+}
+
+h3 {
+  font-family: var(--bold-font);
 }
 
 p {
