--- a/styles/mainStyles.scss
+++ b/styles/mainStyles.scss
@@ -53,7 +53,11 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  font-family: var(--medium-font);
+  font-family: var(--bold-font);
+}
+
+h3 {
+  font-family: var(--bold-font);
 }
 
 p {
