--- a/styles/mainStyles.css
+++ b/styles/mainStyles.css
@@ -119,22 +119,18 @@ button {
   }
 }
 
-/* width */
 ::-webkit-scrollbar {
   width: 8px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: var(--dark-clr);
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: var(--medium-dark-clr);
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: var(--light-clr);
 }
@@ -258,11 +254,12 @@ header .nav-links {
       -ms-flex-align: center;
           align-items: center;
   min-height: 100vh;
+  padding: 0;
 }
 
 header .nav-links a {
   color: var(--medium-dark-clr);
-  font-size: 3rem;
+  font-size: calc(2em + 1vw);
   text-decoration: none;
   text-transform: uppercase;
 }
