--- a/styles/mainStyles.scss
+++ b/styles/mainStyles.scss
@@ -24,6 +24,7 @@
 ::before,
 ::after {
   box-sizing: border-box;
+  cursor: none;
 }
 
 html,
@@ -130,6 +131,22 @@ button {
 ::-webkit-scrollbar-thumb:hover {
   background: var(--light-clr);
 }
+
+// Cursor Styling
+
+.cursor {
+  width: 3rem;
+  height: 3rem;
+  background: var(--light-clr);
+  border: 2px solid var(--light-clr);
+  border-radius: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  z-index: 9;
+  mix-blend-mode: difference;
+}
+
 
 // Header Styling
 
