--- a/styles/mainStyles.scss
+++ b/styles/mainStyles.scss
@@ -33,6 +33,7 @@ body {
   background-color: var(--dark-clr);
   color: #fff;
   font-family: var(--regular-font);
+  overflow-x: hidden;
 }
 
 body,
