--- a/styles/mainStyles.css
+++ b/styles/mainStyles.css
@@ -67,6 +67,7 @@ h2 {
 }
 
 h3 {
+  font-size: 1.5rem;
   font-family: var(--bold-font);
 }
 
@@ -115,9 +116,9 @@ button {
   padding: 1rem;
 }
 
-@media screen and (min-width: 60em) {
+@media screen and (min-width: 58em) {
   .container--narrow {
-    min-width: 55rem;
+    min-width: 58em;
   }
 }
 
@@ -405,15 +406,13 @@ header .menu-close {
 }
 
 @media screen and (min-width: 55em) {
-  .about-secction {
+  .about-section {
     margin: 0 auto;
-  }
-  .about-secction p {
-    margin: 0 auto;
+    max-width: 500px;
   }
 }
 
-@media screen and (min-width: 50em) {
+@media screen and (min-width: 60em) {
   .main-block {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -424,6 +423,74 @@ header .menu-close {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    padding: 2.5em 0;
   }
+  .main-block .img {
+    width: 500px;
+    height: 500px;
+    -webkit-perspective: 300px;
+            perspective: 300px;
+  }
+  .main-block .img-wrapper {
+    position: relative;
+    z-index: 1;
+    height: 100%;
+    background: black;
+    overflow: hidden;
+    -webkit-box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.3);
+            box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.3);
+    -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+  }
+  .main-block .img-inner {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+  }
+  .main-block .img-holder {
+    -webkit-transform: scale(1.4);
+            transform: scale(1.4);
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .main-block .main-block-right {
+    max-width: 100%;
+  }
+  .main-block .project-description {
+    margin: 0 auto;
+    max-width: 400px;
+  }
+}
+
+.img_container {
+  width: 100%;
+  position: relative;
+}
+
+.img_container:nth-child(even) {
+  margin-right: 0;
+  margin-left: auto;
+}
+
+.img-holder {
+  height: 100%;
+  width: 100%;
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.mask {
+  visibility: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 /*# sourceMappingURL=mainStyles.css.map */
