--- a/styles/mainStyles.scss
+++ b/styles/mainStyles.scss
@@ -60,6 +60,7 @@ h2 {
 }
 
 h3 {
+  font-size: 1.5rem;
   font-family: var(--bold-font);
 }
 
@@ -108,9 +109,9 @@ button {
   padding: 1rem;
 }
 
-@media screen and (min-width: 60em) {
+@media screen and (min-width: 58em) {
   .container--narrow {
-    min-width: 55rem;
+    min-width: 58em;
   }
 }
 
@@ -315,21 +316,91 @@ header {
 // About Styling
 
 @media screen and (min-width: 55em) {
-  .about-secction {
+  .about-section {
     margin: 0 auto;
+    max-width: 500px;
 
-    p {
-      margin: 0 auto;
-    }
   }
 }
 
 // Project Styling
 
-@media screen and (min-width: 50em) {
+@media screen and (min-width: 60em) {
   .main-block {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 2.5em 0;
+
+    .project-title {
+
+    }
+
+    .img {
+      width: 500px;
+      height: 500px;
+      perspective: 300px;
+    }
+
+    .img-wrapper {
+      position: relative;
+      z-index: 1;
+      height: 100%;
+      background: black;
+      overflow: hidden;
+      box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.3);
+      transform-style: preserve-3d;
+    }
+
+    .img-inner {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 0;
+    }
+
+    .img-holder {
+      transform: scale(1.4);
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .main-block-right {
+      max-width: 100%;
+    }
+
+    .project-description {
+      margin: 0 auto;
+      max-width: 400px;
+    }
   }
+}
+
+
+.img_container {
+  width: 100%;
+  position: relative;
+}
+
+.img_container:nth-child(even) {
+  margin-right: 0;
+  margin-left: auto;
+}
+
+.img-holder {
+  height: 100%;
+  width: 100%;
+  transform-origin: left;
+  object-fit: cover;
+}
+
+.mask {
+  visibility: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
