--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -6,66 +6,48 @@
       align-items: center;
       justify-content: space-between;
       padding: 2.5em 0;
-  
-      .img {
-        width: 500px;
-        height: 500px;
-        perspective: 300px;
-      }
-  
-      .img-wrapper {
-        position: relative;
-        z-index: 1;
-        height: 100%;
-        background: black;
-        overflow: hidden;
-        box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.3);
-        transform-style: preserve-3d;
-      }
-  
-      .img-inner {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 0;
-      }
-  
-      .img_container {
-        width: 100%;
-        position: relative;
-      }
-  
-      .img_container:nth-child(even) {
-        margin-right: 0;
-        margin-left: auto;
-      }
-  
-      .mask {
-        visibility: hidden;
-        position: relative;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-      }
-  
-      .img-holder {
-        transform: scale(1.2);
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transform-origin: left;
-        object-position: 0 -50px;
-      }
-  
-      .main-block-right {
-        max-width: 100%;
-      }
-  
-      .project-description {
-        margin: 0 auto;
-        max-width: 400px;
-      }
     }
+  
+      .card {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+        margin-bottom: 2rem;
+      }
+      
+      .card h3 {
+        margin-bottom: 2rem;
+      }
+      
+      .card img {
+        height: 400px;
+      }
+      
+      .card > div {
+        padding: 2rem;
+      }
+      
+      .card:nth-child(even) img {
+        order: 2;
+      }
+      
+      
+      .btn {
+        display: inline-block;
+        background: #000;
+        color: #fff;
+        padding: 0.8rem 1.8rem;
+        margin-top: 2rem;
+        cursor: pointer;
+      }
+      
+      .btn:hover {
+        opacity: 0.8;
+      }
+      
+      @media(max-width:600px) {
+        .card {
+          display: block;
+        }
+      }
   }
