WIP:Added styling for contact form

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,10 @@
 @import "_fonts";
 @import "_generic";
+@import "_scrollbar";
 @import "_header";
 @import "_landing";
 @import "_about";
-@import "_scrollbar";
 @import "_project";
+@import "_contact";
 @import "_footer";
 
