--- a/styles/_generic.scss
+++ b/styles/_generic.scss
@@ -32,6 +32,7 @@
     color: #fff;
     font-family: var(--regular-font);
     overflow-x: hidden;
+    outline: none;
   }
   
   body,
@@ -109,8 +110,16 @@
     border: 1px solid #fff;
     color: var(--light-clr);
     font-family: var(--regular-font);
-    font-size: 1.35rem;
+    font-size: 1.5rem;
     padding: 1rem;
+    margin: 3rem 0;
+    width: 100%;
+  }
+
+  button:hover {
+    background: #fff;
+    color: #000;
+    transition: 0.5s;
   }
   
   @media screen and (min-width: 58em) {
