--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -9,5 +9,13 @@ footer {
             width: 50px;
             margin: 2em 0;
         }
+
+        @media screen and (max-width: 40em) {
+            p {
+                font-size: .8rem;
+                margin: 0;
+            }
+        }
     }
 }
+
