--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -8,12 +8,19 @@
 .form .name-input input, .form .email-input input, .form .message-input textarea {
     width: 100%;
     height: 100%;
-    padding-top: 25px;
     border: none;
     background-color: transparent;
     outline: none;
     color: #fff;
     font-size: 1.5rem;
+}
+
+.form .name-input input, .form .email-input input {
+    padding-top: 25px;
+}
+
+.form .message-input textarea {
+    padding-top: 40px;
 }
 
 .form .name-input label, .form .email-input label, .form .message-input label {
